# hexrec

./: .bumpversion.cfg  .cookiecutterrc  .coveragerc  .gitignore  .readthedocs.yaml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  appveyor.yml  clean.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  packaging.yml
_static/: readme.txt
ci/: appveyor-bootstrap.py  appveyor-download.py
docs/: architecture.plantuml  cli.rst  conf.py  index.rst  installation.rst  reference.rst  requirements.txt  usage.rst
docs/_autosummary/: hexrec.base.BaseFile.rst  hexrec.base.BaseRecord.rst  hexrec.base.BaseTag.rst  hexrec.base.FILE_TYPES.rst  hexrec.base.TOKEN_COLOR_CODES.rst  hexrec.base.colorize_tokens.rst  hexrec.base.convert.rst  hexrec.base.file_types.rst  hexrec.base.guess_format_name.rst  hexrec.base.guess_format_type.rst  hexrec.base.load.rst  hexrec.base.merge.rst  hexrec.base.rst  hexrec.blocks.Memory.rst  hexrec.blocks.check_sequence.rst  hexrec.blocks.chop_blocks.rst  hexrec.blocks.clear.rst  hexrec.blocks.collapse.rst  hexrec.blocks.crop.rst  hexrec.blocks.delete.rst  hexrec.blocks.fill.rst  hexrec.blocks.find.rst  hexrec.blocks.flood.rst  hexrec.blocks.insert.rst  hexrec.blocks.locate_at.rst  hexrec.blocks.locate_endex.rst  hexrec.blocks.locate_start.rst  hexrec.blocks.merge.rst  hexrec.blocks.overlap.rst  hexrec.blocks.read.rst  (+129 more)
pyinstaller/: .gitignore  README.rst  hexrec.spec  hexrec_cli.py
tests/: .gitattributes  test_base.py  test_blocks.py  test_cli.py  test_formats_ascii_hex.py  test_formats_asciihex.py  test_formats_avr.py  test_formats_binary.py  test_formats_ihex.py  test_formats_intel.py  test_formats_mos.py  test_formats_motorola.py  test_formats_raw.py  test_formats_sqtp.py  test_formats_srec.py  test_formats_tektronix.py  test_formats_titxt.py  test_formats_xtek.py  test_hexdump.py  test_hexrec.py  test_readme.py  test_records.py  test_records2.py  test_utils.py  test_xxd.py
(+235 files in other folders)
