[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 77.0.3"]

[project]
authors = [{name = "Andrea Zoppi", email = "texzk@email.it"}]
classifiers = [
    # complete classifier list:
    # http://pypi.python.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",  # adds: typing.Literal
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",  # adds: typing.TypeAlias
    "Programming Language :: Python :: 3.11",  # adds: typing.Self
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
    "Topic :: Software Development",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: Utilities",
]
dependencies = [
    "bytesparse >= 1.0.0",
    "click",
    "colorama",
]
description = "Library to handle hexadecimal record files"
dynamic = ["version"]
license = "BSD-2-Clause"
name = "hexrec"
readme = "README.rst"
requires-python = ">= 3.7"

[project.optional-dependencies]
testing = ["coverage", "pyelftools", "pytest"]

[project.scripts]
hexrec = "hexrec.cli:main"

[project.urls]
documentation = "https://hexrec.readthedocs.io/en/latest/"
source = "https://github.com/TexZK/hexrec/"
tracker = "https://github.com/TexZK/hexrec/issues/"

[tool.setuptools.dynamic]
version = {attr = "hexrec.__version__"}
